added parameter selection for A2 report

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,9 @@
 {
     "application.organization.name": "Bundesamt für Informatik und Telekommunikation BIT",
     "application.title": "Covid-Zertifikat",
+    "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den Daten.",
+    "bulk.revocation.link": "Mehrere Zertifikate speren",
+    "bulk.revocation.title": "Mehrere Zertifikate speren",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -93,6 +96,9 @@
     "common.language.it": "Italienisch",
     "common.language.rm": "Romanisch",
     "common.next": "Weiter",
+    "dashboard.bulk.revocation.action": "Mehrere Zertifikate sperren",
+    "dashboard.bulk.revocation.description": "Hier können Sie mehrere erstellte Zertifikate sperren. Gesperrte Zertifikate werden als nicht gültig deklariert und können nicht mehr verwendet werden.",
+    "dashboard.bulk.revocation.title": "Mehrere Zertifikate sperren",
     "dashboard.createCertificate.action": "Zertifikat erstellen",
     "dashboard.createCertificate.description": "Hier können Sie ein neues Zertifikat erstellen.",
     "dashboard.createCertificate.title": "Neues Zertifikat erstellen",
@@ -158,7 +164,6 @@
     "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
-    "reports.a10.title": "A7 / A10",
     "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
     "reports.a11.description.short": "Liste revozierter Zertifikate eines bestimmten Zeitraums.",
     "reports.a11.title": "A11",
@@ -167,22 +172,21 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Wer hat wann und über welchen Ausstellkanal dieses spezifische Zertifikat ausgestellt und welcher Zertifikatstyp war das?</strong></br></br>\nNach Eingabe der UVCI liefert Ihnen dieser Report Informationen zur Ausstellerin/zum Aussteller, den Ausstellzeitpunkt und -kanal sowie den Typ des gesuchten Zertifikats. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
     "reports.a2.description.short": "Detailinformationen (Ausstellkanal, Aussteller/in, Zeitpunkt und Zertifikatstyp) zu einer spezifischen Zertifikats-UVCI. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
+    "reports.a2.reset-input": "Eingabe zurücksetzen",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Wie viele Zertifikate welchen Typs hat ein spezifischer Aussteller in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a3.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
-    "reports.a3.title": "A3",
+    "reports.a3.title": "A3 / A5",
     "reports.a4.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt) hat ein/e spezifische/r Aussteller/in in einem definierten Zeitraum über welche Kanäle ausgestellt? </strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine Liste mit den ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI.",
     "reports.a4.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin, eines bestimmten Ausstellers oder Organisationseinheit (Unit).",
     "reports.a4.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
     "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
-    "reports.a5.title": "A3 / A5",
     "reports.a6.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt, Kanal) haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit den pro Aussteller/in ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI pro Zertifikat.",
     "reports.a6.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin/ eines bestimmten Ausstellers oder Organisationseinheit (Unit). ",
-    "reports.a6.title": "A4 / A6",
     "reports.a7.description.long": "<strong>Welche/r Aussteller/in hat welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine Liste von Aussteller/innen und die jeweilige Anzahl ausgestellter Zertifikate dieses Typs. ",
     "reports.a7.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
-    "reports.a7.title": "A7",
+    "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
     "reports.a8.description.short": "Wochenweise Anzahl Zertifikate pro Typ, gegliedert nach Ausstellkanal.",
     "reports.a8.title": "A8",
@@ -195,12 +199,16 @@
     "reports.detail.header": "Sie möchten einen Verdachtsfall analysieren? Wählen Sie dazu einen Detailreport.",
     "reports.detail.info": "In einem konkreten Verdachtsfall wird ein Report erstellt, der jede einzelne Aktion einer Ausstellerin oder eines Ausstellers oder einer ausstellenden Organisation ausweist. Mit dem Nachweis kann der konkrete Missbrauchsfall widerlegt oder bewiesen werden.",
     "reports.detail.title": "Detail",
+    "reports.generate": "Report generieren",
     "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, finden Sie hier zu jedem Parameter eine Erklärung.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
     "reports.statistic.header": "Sie möchten eine statistische Auswertung? Wählen Sie dazu einen Statistikreport.",
     "reports.statistic.info": "Mit dem Statistikreport werden die Gesamtzahlen der in der Schweiz erstellten Covid-Zertifikaten pro Zertifikatstyp ausgewiesen.",
     "reports.statistic.title": "Statistik",
+    "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "reports.uvci.format.error": "Die UVCI muss imFormat urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
+    "reports.uvci.info": "Bitte geben Sie die UVCI des Zertifikats ein.</br>Falls Sie mehrere UVCI gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
     "support.instructions": "Sollten Sie Probleme mit dem CSV Upload haben, wenden Sie sich bitte an den BIT-Helpdesk:",
     "support.instructionsUpdated": "Sollten Sie technische Probleme mit der Ausstellung haben, können Sie sich an den BIT-Helpdesk wenden.",
     "support.title": "Support",
