--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,9 @@
 {
     "application.organization.name": "Federal Office of Information Technology, Systems and Telecommunication FOITT",
     "application.title": "COVID certificate",
+    "bulk.revocation.instructions": "Here you can revoke multiple certificates. Please upload the CSV file containing the data.",
+    "bulk.revocation.link": "Revoke multiple certificates",
+    "bulk.revocation.title": "Revoke multiple certificates",
     "certificateCreate.form.group.personalData": "Personal data",
     "certificateCreate.form.group.recovery": "Recovery",
     "certificateCreate.form.group.test": "Test",
@@ -93,6 +96,9 @@
     "common.language.it": "Italian",
     "common.language.rm": "Romansh",
     "common.next": "Next",
+    "dashboard.bulk.revocation.action": "Revoke multiple certificates",
+    "dashboard.bulk.revocation.description": "You can revoke multiple generated certificates here. Revoked certificates are declared invalid and can no longer be used.",
+    "dashboard.bulk.revocation.title": "Revoke multiple certificates",
     "dashboard.createCertificate.action": "Generate certificate",
     "dashboard.createCertificate.description": "You can generate a new certificate here.",
     "dashboard.createCertificate.title": "Generate new certificate",
@@ -158,7 +164,6 @@
     "reports.a1.title": "",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
-    "reports.a10.title": "A7 / A10",
     "reports.a11.description.long": "<strong>Which certificates were revoked in a certain period? </strong></br></br>This report provides you with a list of all certificates revoked in the selected canton in the defined period. Please note that the revocation period does not match the certificate issue period.",
     "reports.a11.description.short": "List of certificates revoked in a certain period.",
     "reports.a11.title": "A11",
@@ -167,22 +172,21 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Who issued this specific certificate, when did they issue it, via what issuing channel, and what type of certificate was it?</strong></br></br>After entry of the UVCI this report provides you with information on the issuer, the time of issue, the issuing channel and the type of certificate being searched for. Information on the person for whom the certificate was issued is not available.",
     "reports.a2.description.short": "Detailed information (issuing channel, issuer, time and type of certificate) for a specific certificate UVCI. Information on the person for whom the certificate was issued is not available.",
+    "reports.a2.reset-input": "",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>How many certificates of what type did a specific issuer issue via what channels in a defined period?</strong></br></br>This report provides you with a list, broken down by issuer, of the total certificate types issued and issuing channels.",
     "reports.a3.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
-    "reports.a3.title": "A3",
+    "reports.a3.title": "A3 / A5",
     "reports.a4.description.long": "<strong>What certificates (UVCI, type and time) did a specific issuer issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI.",
     "reports.a4.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
     "reports.a4.title": "A4 / A6",
     "reports.a5.description.long": "<strong>How many certificates of what type did individual issuers in a unit issue via what channels in a defined period?</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.",
     "reports.a5.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
-    "reports.a5.title": "A3 / A5",
     "reports.a6.description.long": "<strong>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI of each certificate.",
     "reports.a6.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
-    "reports.a6.title": "A4 / A6",
     "reports.a7.description.long": "<strong>What issuer issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type this report provides you with a list of issuers and the number of certificates of this type issued in each case.",
     "reports.a7.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
-    "reports.a7.title": "A7",
+    "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>How many certificates of the various certificate types were issued per week (max. last 3 months) via which channels?</strong></br></br>This report provides you with a weekly list of certificate types and the number of each per issuing channel (one worksheet per week). The second to nth worksheet also shows the difference to the previous week.",
     "reports.a8.description.short": "Weekly number of certificates of each type, broken down by issuing channel.",
     "reports.a8.title": "A8",
@@ -195,12 +199,16 @@
     "reports.detail.header": "",
     "reports.detail.info": "In a concrete case of suspicion a report is created showing every single action of an issuer or issuing organisation. The evidence can be used to refute or prove the concrete case of abuse.",
     "reports.detail.title": "Detail",
+    "reports.generate": "",
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
     "reports.statistic.header": "",
     "reports.statistic.info": "The statistical report presents overall figures for COVID certificates issued in Switzerland by certificate type.",
     "reports.statistic.title": "Statistics",
+    "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "reports.uvci.format.error": "",
+    "reports.uvci.info": "",
     "support.instructions": "If you have any problems with the CSV upload, please contact the BIT Helpdesk:",
     "support.instructionsUpdated": "If you are facing technical problems issuing Covid-certificates, please contact the FOITT helpdesk.",
     "support.title": "Support",
