--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,9 @@
 {
     "application.organization.name": "Office fédéral de l'informatique et de la télécommunication OFIT",
     "application.title": "Certificat COVID",
+    "bulk.revocation.instructions": "Vous pouvez révoquer plusieurs certificats. Pour ce faire, veuillez charger le fichier CSV contenant les données.",
+    "bulk.revocation.link": "Verrouiller plusieurs certificats",
+    "bulk.revocation.title": "Verrouiller plusieurs certificats",
     "certificateCreate.form.group.personalData": "Données personnelles",
     "certificateCreate.form.group.recovery": "Guérison",
     "certificateCreate.form.group.test": "Test",
@@ -93,6 +96,9 @@
     "common.language.it": "Italien",
     "common.language.rm": "Romanche",
     "common.next": "Suivant",
+    "dashboard.bulk.revocation.action": "Verrouiller plusieurs certificats",
+    "dashboard.bulk.revocation.description": "Vous pouvez ici révoquer plusieurs certificats établis. Les certificats révoqués sont déclarés comme non valides et ne peuvent plus être utilisés.",
+    "dashboard.bulk.revocation.title": "Verrouiller plusieurs certificats",
     "dashboard.createCertificate.action": "Établir un certificat",
     "dashboard.createCertificate.description": "Vous pouvez ici établir un nouveau certificat.",
     "dashboard.createCertificate.title": "Établir un nouveau certificat",
@@ -158,7 +164,6 @@
     "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Quels émetteurs ont délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés.",
     "reports.a10.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
-    "reports.a10.title": "A7 / A10",
     "reports.a11.description.long": "<strong>Quels certificats ont été révoqués pendant une période donnée?</strong></br></br>Ce rapport vous fournit une liste de tous les certificats révoqués pendant la période demandée dans le canton sélectionné. Veuillez noter que la période de révocation ne correspond pas à la période d’émission des certificats.",
     "reports.a11.description.short": "Liste des certificats révoqués pendant une période donnée.",
     "reports.a11.title": "A11",
@@ -167,22 +172,21 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Qui a délivré ce certificat spécifique, quand et par quel canal d’émission, et de quel type de certificat s’agissait-il?</strong></br></br>Après saisie de l'UVCI, ce rapport vous fournit des informations sur l’émetteur, la date et le canal d’émission ainsi que le type de certificat recherché. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
     "reports.a2.description.short": "Informations détaillées (canal d’émission, émetteur, date et type de certificat) sur une UVCI de certificat spécifique. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
+    "reports.a2.reset-input": "",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Combien de certificats de quel type un émetteur spécifique a-t-il délivrés dans une période donnée et par quels canaux?</strong></br></br>Ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a3.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
-    "reports.a3.title": "A3",
+    "reports.a3.title": "A3 / A5",
     "reports.a4.description.long": "<strong>Quels certificats (UVCI, type, date) un émetteur spécifique a-t-il délivrés et par quels canaux au cours d’une période donnée?</strong></br></br>Après saisie et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste des certificats délivrés, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI.",
     "reports.a4.description.short": "Informations détaillées sur tous les certificats délivrés par un émetteur ou une unité organisationnelle (unit) spécifique.",
     "reports.a4.title": "A4 / A6",
     "reports.a5.description.long": "<strong>Combien de certificats de quel type les différents émetteurs d’une unité ont-ils délivrés, et par quels canaux, au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a5.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
-    "reports.a5.title": "A3 / A5",
     "reports.a6.description.long": "<strong>Quels certificats (UVCI, type, date, canal) chaque émetteur d’une unité a-t-il délivrés au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste structurée par émetteur avec les certificats délivrés par émetteur, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI par certificat.",
     "reports.a6.description.short": "Informations détaillées sur tous les certificats délivrés par un émetteur ou une unité organisationnelle (unit) spécifique.",
-    "reports.a6.title": "A4 / A6",
     "reports.a7.description.long": "<strong>Quel émetteur a délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste des émetteurs et le nombre de certificats délivrés pour ce type de certificat.",
     "reports.a7.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
-    "reports.a7.title": "A7",
+    "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Combien de certificats des différents types ont été délivrés par semaine (max. 3 derniers mois) et par quels canaux ?</strong></br></br>Ce rapport vous fournit une liste hebdomadaire des types de certificats et de leur nombre respectif par canal d’émission (une feuille de calcul par semaine). La deuxième à la xième feuille de calcul indiquent en outre le total de la différence par rapport à la semaine précédente.",
     "reports.a8.description.short": "Nombre hebdomadaire de certificats par type, ventilé par canal d’émission.",
     "reports.a8.title": "A8",
@@ -195,12 +199,16 @@
     "reports.detail.header": "",
     "reports.detail.info": "Dans un cas concret de suspicion, un rapport est établi, qui indique chaque action individuelle d’un émetteur ou d’une organisation émettrice. Cette preuve permet de réfuter ou d’attester l’abus concret. ",
     "reports.detail.title": "Détail",
+    "reports.generate": "",
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
     "reports.statistic.header": "",
     "reports.statistic.info": "Le rapport statistique présente le nombre total de certificats COVID générés en Suisse par type de certificat.",
     "reports.statistic.title": "Statistiques",
+    "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "reports.uvci.format.error": "",
+    "reports.uvci.info": "",
     "support.instructions": "Si vous rencontrez des problèmes avec l'envoi de CSV, veuillez contacter le helpdesk de l'OFIT:",
     "support.instructionsUpdated": "Si vous rencontrez des problèmes techniques pour émettre des certificats Covid, veuillez contacter le Helpdesk de l'OFIT.",
     "support.title": "Support",
@@ -210,7 +218,7 @@
     "upload.file.upload": "Générer des certificats",
     "upload.file.upload.size.error": "Le fichier est trop grand.",
     "upload.file.upload.success": "Les certificats ont été créés avec succès. Veuillez vérifier le fichier ZIP retourné.",
-    "upload.instructions": "Vous pouvez générer plusieurs certificats. Pour ce faire, veuillez sélectionnez le type des certificats à générer et chargez le fichier CSV contenant les données.",
+    "upload.instructions": "Vous pouvez générer plusieurs certificats. Pour ce faire, veuillez sélectionner le type des certificats à générer et charger le fichier CSV contenant les données.",
     "upload.link": "Générer plusieurs certificats",
     "upload.templates": "Modèles pour l'envoi de CSV.",
     "upload.title": "Générer plusieurs certificats",
