add warning message when revocation not successful
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -4,8 +4,9 @@
     "bulk.revocation.file.upload": "Zertifikate sperren",
     "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den Daten.",
     "bulk.revocation.link": "Mehrere Zertifikate speren",
-    "bulk.revocation.success": "Der Antrag auf Widerruf von Zertifikaten wurde erfolgreich bearbeitet. Bitte prüfen Sie die zurückgegebene CSV-Datei, um die Details zu erfahren.",
+    "bulk.revocation.success": "Die Zertifikaten wurden erfolgreich widerrufen.",
     "bulk.revocation.title": "Mehrere Zertifikate speren",
+    "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die zurückgegebene CSV-Datei, um die Details zu erfahren.",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -202,6 +203,7 @@
     "reports.detail.info": "In einem konkreten Verdachtsfall wird ein Report erstellt, der jede einzelne Aktion einer Ausstellerin oder eines Ausstellers oder einer ausstellenden Organisation ausweist. Mit dem Nachweis kann der konkrete Missbrauchsfall widerlegt oder bewiesen werden.",
     "reports.detail.title": "Detail",
     "reports.generate": "Report generieren",
+    "reports.generation.title": "",
     "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, finden Sie hier zu jedem Parameter eine Erklärung.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
