--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,8 +4,9 @@
     "bulk.revocation.file.upload": "Revoke certificates",
     "bulk.revocation.instructions": "Here you can revoke multiple certificates. Please upload the CSV file containing the data.",
     "bulk.revocation.link": "Revoke multiple certificates",
-    "bulk.revocation.success": "Certificates revocation request has been successfully processed. Please check the returned CSV to know the details.",
+    "bulk.revocation.success": "Certificates have been successfully revoked.",
     "bulk.revocation.title": "Revoke multiple certificates",
+    "bulk.revocation.warning": "Not all revocations were successful. Please check the returned CSV to know the details.",
     "certificateCreate.form.group.personalData": "Personal data",
     "certificateCreate.form.group.recovery": "Recovery",
     "certificateCreate.form.group.test": "Test",
