--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,8 +4,9 @@
     "bulk.revocation.file.upload": "Verrouiller des certificats",
     "bulk.revocation.instructions": "Vous pouvez révoquer plusieurs certificats. Pour ce faire, veuillez charger le fichier CSV contenant les données.",
     "bulk.revocation.link": "Verrouiller plusieurs certificats",
-    "bulk.revocation.success": "La demande de révocation de certificats a été traitée avec succès. Veuillez vérifier le CSV retourné pour connaître les détails.",
+    "bulk.revocation.success": "La révocation des certificats a été traitée avec succès.",
     "bulk.revocation.title": "Verrouiller plusieurs certificats",
+    "bulk.revocation.warning": "Toutes les révocations n'ont pas abouti. Veuillez vérifier le CSV retourné pour connaître les détails.",
     "certificateCreate.form.group.personalData": "Données personnelles",
     "certificateCreate.form.group.recovery": "Guérison",
     "certificateCreate.form.group.test": "Test",
