--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -4,8 +4,9 @@
     "bulk.revocation.file.upload": "Bloccare certificati",
     "bulk.revocation.instructions": "È possibile bloccare diversi certificati. Per farlo, carica il file CSV contenente i dati.",
     "bulk.revocation.link": "Bloccare più certificati",
-    "bulk.revocation.success": "La richiesta di revoca dei certificati è stata elaborata con successo. Controllare il CSV restituito per conoscere i dettagli.",
+    "bulk.revocation.success": "La richiesta di revoca dei certificati è stata elaborata con successo.",
     "bulk.revocation.title": "Bloccare più certificati",
+    "bulk.revocation.warning": "Non tutte le revoche hanno avuto successo. Controllare il CSV restituito per conoscere i dettagli.",
     "certificateCreate.form.group.personalData": "Dati personali",
     "certificateCreate.form.group.recovery": "Guarigione",
     "certificateCreate.form.group.test": "Test",
@@ -202,6 +203,7 @@
     "reports.detail.info": "",
     "reports.detail.title": "",
     "reports.generate": "",
+    "reports.generation.title": "",
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
