restrict bulk-revocation to combination of roles
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,11 +2,11 @@
     "application.organization.name": "Bundesamt für Informatik und Telekommunikation BIT",
     "application.title": "Covid-Zertifikat",
     "bulk.revocation.file.upload": "Zertifikate sperren",
-    "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den Daten.",
+    "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den entsprechenden Daten hoch.",
     "bulk.revocation.link": "Mehrere Zertifikate speren",
     "bulk.revocation.success": "Die Zertifikaten wurden erfolgreich widerrufen.",
-    "bulk.revocation.title": "Mehrere Zertifikate speren",
-    "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die zurückgegebene CSV-Datei, um die Details zu erfahren.",
+    "bulk.revocation.title": "Mehrere Zertifikate sperren",
+    "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die generierte CSV-Datei, um Details zu erfahren.",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -164,7 +164,6 @@
     "otp.link": "One-Time-Password generieren",
     "otp.title": "Neues One-Time-Password generieren",
     "report.link": "Report",
-    "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
     "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
@@ -203,7 +202,13 @@
     "reports.detail.info": "In einem konkreten Verdachtsfall wird ein Report erstellt, der jede einzelne Aktion einer Ausstellerin oder eines Ausstellers oder einer ausstellenden Organisation ausweist. Mit dem Nachweis kann der konkrete Missbrauchsfall widerlegt oder bewiesen werden.",
     "reports.detail.title": "Detail",
     "reports.generate": "Report generieren",
-    "reports.generation.title": "",
+    "reports.generation.info": "Ihre Abfrage wird ausgeführt und der Report erstellt. Bei grossen Datenmengen, kann dies mehrere Minuten in Anspruch nehmen. Wir bitten Sie um etwas Geduld. Achtung: Bitte schliessen Sie dieses Fenster während dieser Zeit nicht und machen Sie keinen Reload, da das Erstellen des Reports dadurch abgebrochen wird.",
+    "reports.generation.success": "Vielen Dank für Ihre Geduld. Der Report ist nun fertiggestellt und steht Ihnen zum Download zur Verfügung.",
+    "reports.generation.success.title": "Ihr Report wurde generiert",
+    "reports.generation.success.warning": "Bitte beachten Sie, dass nicht für alle Suchparameter Daten gefunden oder ausgegeben werden konnten. Für detailliertere Hinweise prüfen Sie den erstellten Report.",
+    "reports.generation.title": "Ihr Report wird generiert",
+    "reports.generation.too-big": "Die Anzahl Datensätze, die den Suchkriterien entsprechen ist zu gross und die Abfrage kann nicht abgeschlossen werden.\nBitte schränken Sie die Suche weiter ein.",
+    "reports.generation.too-big.title": "Fehler",
     "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, finden Sie hier zu jedem Parameter eine Erklärung.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
