--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -164,7 +164,6 @@
     "otp.link": "Genera One-Time-Password",
     "otp.title": "Generare una nuova One-Time-Password",
     "report.link": "",
-    "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Quali emittenti hanno rilasciato un tipo specifico di certificato e quanti ne hanno rilasciati in un determinato periodo di tempo?</strong></br></br>Dopo che è stato selezionato un tipo di certificato, il rapporto fornisce un elenco, suddiviso per emittente, con il numero totale di tipi di certificati rilasciati.",
     "reports.a10.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
     "reports.a11.description.long": "<strong>Quali certificati sono stati revocati in un determinato periodo di tempo? </strong></br></br>Questo rapporto fornisce un elenco di tutti i certificati revocati durante il periodo in questione e nel Cantone selezionato. Si segnala che il periodo di revoca non corrisponde al periodo di emissione dei certificati.",
@@ -203,7 +202,13 @@
     "reports.detail.info": "",
     "reports.detail.title": "",
     "reports.generate": "",
+    "reports.generation.info": "La richiesta è in fase di elaborazione e il rapporto verrà generato a breve. In caso di grandi quantità di dati possono essere necessari diversi minuti. Si prega di attendere.\nAttenzione: non chiudere questa finestra durante il processo di elaborazione e non ricaricare la pagina per non annullare la generazione del rapporto.",
+    "reports.generation.success": "Grazie dell’attesa. Il rapporto è stato ultimato ed è pronto per il download.",
+    "reports.generation.success.title": "Creazione avvenuta con successo",
+    "reports.generation.success.warning": "Tenga presente che non per tutti i parametri di ricerca è stato possibile trovare o emettere dati. Per indicazioni più dettagliate esamini il rapporto creato.",
     "reports.generation.title": "",
+    "reports.generation.too-big": "Il numero di risultati corrispondenti ai criteri di ricerca è troppo grande e la ricerca non può essere completata. Si prega di restringere la ricerca.",
+    "reports.generation.too-big.title": "Errore",
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
