--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -164,7 +164,6 @@
     "otp.link": "Générer un One-Time-Password",
     "otp.title": "Générer un nouvel One-Time-Password",
     "report.link": "",
-    "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Quels émetteurs ont délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés.",
     "reports.a10.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
     "reports.a11.description.long": "<strong>Quels certificats ont été révoqués pendant une période donnée?</strong></br></br>Ce rapport vous fournit une liste de tous les certificats révoqués pendant la période demandée dans le canton sélectionné. Veuillez noter que la période de révocation ne correspond pas à la période d’émission des certificats.",
@@ -203,6 +202,13 @@
     "reports.detail.info": "Dans un cas concret de suspicion, un rapport est établi, qui indique chaque action individuelle d’un émetteur ou d’une organisation émettrice. Cette preuve permet de réfuter ou d’attester l’abus concret. ",
     "reports.detail.title": "Détail",
     "reports.generate": "",
+    "reports.generation.info": "Votre requête est en cours d’exécution et le rapport est généré. Si la quantité de données est importante, cela peut prendre plusieurs minutes. Nous vous prions de faire preuve de patience. Attention : veuillez ne pas fermer cette fenêtre pendant le processus de création et ne pas faire de nouveau téléchargement, car cela interromprait la création du rapport.",
+    "reports.generation.success": "Merci de votre patience. Le rapport est maintenant terminé et peut être téléchargé.",
+    "reports.generation.success.title": "Génération des données réussie",
+    "reports.generation.success.warning": "Attention : les données n’ont pas pu être trouvées ou générées pour tous les paramètres de recherche. Pour de plus amples informations, veuillez consulter le rapport établi.",
+    "reports.generation.title": "",
+    "reports.generation.too-big": "Le nombre de données correspondant aux critères de recherche est trop important, et la requête ne peut pas être terminée. Veuillez restreindre davantage votre recherche.",
+    "reports.generation.too-big.title": "Erreur",
     "reports.param-help.description": "",
     "reports.param-help.download": "",
     "reports.param-help.title": "",
