--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,7 +3,7 @@
     "application.title": "Covid-Zertifikat",
     "bulk.revocation.file.upload": "Zertifikate sperren",
     "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den entsprechenden Daten hoch.",
-    "bulk.revocation.link": "Mehrere Zertifikate speren",
+    "bulk.revocation.link": "Mehrere Zertifikate sperren",
     "bulk.revocation.success": "Die Zertifikaten wurden erfolgreich widerrufen.",
     "bulk.revocation.title": "Mehrere Zertifikate sperren",
     "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die generierte CSV-Datei, um Details zu erfahren.",
